# hone

./: .env  .firebaserc  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  FACETS_LOGIC.md  LICENSE  README.md  SECURITY.md  cypress.config.ts  firebase.json  index.html  justfile  package-lock.json  package.json  summary.md  tsconfig.json  vite.config.ts
.firebase/: hosting.ZGlzdA.cache
.github/workflows/: CI.yml  ci.yml  deploy.yml  depoly.yml  quality-check.yml  release.yml
.husky/: pre-commit  pre-push
artifacts/: name-audit-2026-06-24.md
contracts/: me-semantic-contract.v1.json
crates/hone-cli/: Cargo.toml
crates/hone-cli/src/: main.rs
crates/hone-core/: Cargo.toml
crates/hone-index/: Cargo.toml
crates/hone-markdown/: Cargo.toml
crates/hone-store/: Cargo.toml
crates/hone-store/src/: lib.rs
crates/me-cli/: Cargo.toml
crates/me-cli/src/: main.rs
crates/me-core/: Cargo.toml
crates/me-index/: Cargo.toml
crates/me-markdown/: Cargo.toml
crates/me-store/: Cargo.toml
cypress/e2e/: Editor.spec.ts  Home_EmptyData.spec.ts  Home_Initialized.spec.ts  Home_NoData.spec.ts
cypress/support/: e2e.ts
docs/: PUBLISHING.md  cli.md  codex-experience.md  constitution.md  contracts.md  harness.md  homebrew-core-submission.md  install.md  mental-model.md  naming.md  philosophy.md  privacy.md  references-and-procedures.md  testing-agent-tools.md
packaging/homebrew/: hone.rb.template  me.rb.template
packaging/homebrew-core/: me.rb
public/: GettingStarted.json
release/: install-channel.toml
scripts/: name-audit.sh  naming-contract-check.sh  real-codex-smoke.md  release-check.sh  run-e2e.mjs  update-homebrew-formula.sh  verify-core-install.sh  verify-install-channel.sh
src/: App.tsx  firebase.ts  main.tsx  styles.css
src/components/: Articles.tsx  CustomErrorBoundary.tsx  EditionViewer.tsx  Editor.tsx  Facets.tsx  Home.tsx  HoneEditor.module.css  HoneEditor.tsx  MessageDisplay.tsx
src/constants/: storage.ts
src/models/: ArticleTitleNode.ts  FacetTitleNode.ts
src/plugins/: AutoSavePlugin.ts  CustomTextFormatShortcutPlugin.ts  DisableLineBreakInFacetTitlePlugin.ts  DisableLinebreakInTitlePlugin.ts  DisableTextFormatPlugin.ts  DisableTextFormattingPlugin.ts  HandlePastePlugin.ts  HonePanelPlugin.tsx  KeepTitlesInOneLinePlugin.ts  LinebreakToParagraphPlugin.ts  LoadArticlePlugin.tsx  (+9 more)
(+39 files in other folders)
