[workspace]
members = [
    "crates/me-core",
    "crates/me-markdown",
    "crates/me-index",
    "crates/me-store",
    "crates/me-cli",
]
resolver = "2"

[workspace.package]
version = "0.8.2"
edition = "2024"
license = "MIT"
repository = "https://github.com/inshell-art/me"

[workspace.dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
fs2 = "0.4"
pulldown-cmark = "0.10"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
similar = "2.6"
tar = "0.4"
tempfile = "3.10"
thiserror = "1.0"
time = { version = "=0.3.41", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8"
ulid = "1.1"
walkdir = "2.5"
