[package]
name = "hone-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "hone"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
hone-core = { path = "../hone-core" }
hone-store = { path = "../hone-store" }
serde_json.workspace = true
thiserror.workspace = true
