[package]
name = "hone-store"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
fs2.workspace = true
hone-core = { path = "../hone-core" }
hone-index = { path = "../hone-index" }
hone-markdown = { path = "../hone-markdown" }
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
similar.workspace = true
tar.workspace = true
tempfile.workspace = true
thiserror.workspace = true
time.workspace = true
toml.workspace = true
ulid.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile.workspace = true
