[package]
name = "me-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "me"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
me-core = { path = "../me-core" }
me-store = { path = "../me-store" }
serde_json.workspace = true
thiserror.workspace = true
